--- a/asp_presentaciones/Pages/Ventanas/Hoteles.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Hoteles.cshtml
@@ -68,7 +68,7 @@
                     <div class="mb-3 row">
                         <label class="col-sm-2 col-form-label">Foto de los Dueños</label>
                         <div class="col-sm-10">
-                            <img src="/Imagenes/b1a0f55a-9bec-4e95-95a9-7a98e74391c7.jpg"
+                            <img src="/Imagenes/dueños.jpg"
                                  alt="Foto de los Dueños"
                                  style="max-width: 120px; height: auto; border: 2px solid #ccc; border-radius: 8px;" />
                             <p class="text-muted mt-2"><i>@Model.Actual.Dueños</i></p>
@@ -116,7 +116,12 @@
                         <tr>
                             <th>Id_Hotel</th>
                             <th>Nombre</th>
-                            <th>Dueños</th>
+                                <th>
+                                    Dueños  <img src="/Imagenes/dueños.jpg"
+                                                 alt="Foto de los Dueños"
+                                                 style="max-width: 120px; height: auto; border: 2px solid #ccc; border-radius: 8px;" />
+                                   
+                                </th>
                             <th>Acción</th>
                         </tr>
                     </thead>
