--- a/asp_presentaciones/Pages/Index.cshtml
+++ b/asp_presentaciones/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "";
 }
 
-<!-- Fuente elegante desde Google Fonts -->
+
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
@@ -61,7 +61,7 @@
 @if (!Model.EstaLogueado)
 {
     <div class="login-container">
-        <h3>Login</h3>
+        <CENTER><h3>Login</h3></CENTER>
 
         <form method="POST">
             <div class="form-group">
