--- a/asp_presentaciones/Pages/Ventanas/Huespedes.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Huespedes.cshtml
@@ -7,7 +7,7 @@
     <div class="container mt-4">
         <!-- Imagen representativa del hotel -->
         <div class="text-center mb-4">
-            <img src="/Imagenes/hotel.jpeg"
+            <img src="/Imagenes/huesped.jpg"
                  alt="Huesped representativo"
                  style="max-width: 500px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
             <p style="font-style: italic; font-size: small;">Huespedes</p>
@@ -31,19 +31,20 @@
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
             </div>
 
-            @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-            Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
+            @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden" asp-for="@Model.Actual!.Id_Huesped" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_H" />
             }
+
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
+                <input type="hidden" asp-for="@Model.Actual!.Id_Huesped" />
                 <input type="hidden" asp-for="@Model.Actual!.Nombre" />
                 <input type="hidden" asp-for="@Model.Actual!.Apellido" />
                 <input type="hidden" asp-for="@Model.Actual!.Fecha_Naci" />
                 <input type="hidden" asp-for="@Model.Actual!.Edad" />
-                    <input type="hidden" asp-for="@Model.Actual!.Sexo" />
+                <input type="hidden" asp-for="@Model.Actual!.Sexo" />
                 <input type="hidden" asp-for="@Model.Actual!.Telefono" />
                 <input type="hidden" asp-for="@Model.Actual!.Correo" />
             }
@@ -54,7 +55,12 @@
                     <h4 class="mb-3">Nuevo Huesped</h4>
 
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Id_Huesped</label>
+                        <label class="col-sm-2 col-form-label">
+                            <img src="/Imagenes/silueta persona.png"
+                                            alt="Huesped representativo"
+                                            style="max-width: 70px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
+                            Id_Huesped
+                        </label>
                         <div class="col-sm-10">
                             <input id="nmId_Huesped" class="form-control" asp-for="@Model.Actual!.Id_Huesped" />
                         </div>
@@ -79,12 +85,22 @@
                             <input id="nmFecha_Naci" class="form-control" asp-for="@Model.Actual!.Fecha_Naci" />
                         </div>
                     </div>
-                     
-                    
-                     <div class="mb-3 row">
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Edad</label>
+                        <div class="col-sm-10">
+                            <input id="nmEdad" class="form-control" asp-for="@Model.Actual!.Edad" />
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
                         <label class="col-sm-2 col-form-label">Sexo</label>
                         <div class="col-sm-10">
-                            <input id="nmSexo" class="form-control" asp-for="@Model.Actual!.Sexo" />
+                    <select id="nmSexo" class="form-control" asp-for="Actual.Sexo">
+                                <option value="">-- Seleccione --</option>
+                        <option value="M">Masculino</option>
+                        <option value="F">Femenino</option>
+                    </select>
                         </div>
                     </div>
                     
@@ -136,7 +152,7 @@
                 <div class="mb-3">
                     <input id="flId_Huesped"
                            class="form-control"
-                           asp-for="@Model.Filtro!.Id_Huesped"
+                           asp-for="@Model.Filtro!.Id_H"
                            placeholder="Id_Huesped" />
                 </div>
 
@@ -144,7 +160,12 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Id_Huesped</th>
+                                <th>Id_H</th>
+                                <th>
+                                    Id_Huesped  <img src="/Imagenes/silueta persona.png"
+                                                     alt="Huesped representativo"
+                                                     style="max-width: 70px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
+                                </th>
                                 <th>Nombre</th>
                                 <th>Apellido</th>
                                 <th>Fecha_Naci</th>
@@ -162,6 +183,8 @@
                                 foreach (var elemento in Model.Lista)
                                 {
                                     <tr>
+
+                                        <td>@elemento.Id_H</td>
                                         <td>@elemento.Id_Huesped</td>
                                         <td>@elemento.Nombre</td>
                                         <td>@elemento.Apellido</td>
@@ -173,10 +196,10 @@
                                         <td>
                                             <input type="submit" value="Modificar" asp-page-handler="BtModificar"
                                                    class="btn btn-warning btn-sm me-1"
-                                                   asp-route-data="@elemento.Id_Huesped" />
+                                                   asp-route-data="@elemento.Id_H" />
                                             <input type="submit" value="Borrar" asp-page-handler="BtBorrarVal"
                                                    class="btn btn-danger btn-sm"
-                                                   asp-route-data="@elemento.Id_Huesped" />
+                                                   asp-route-data="@elemento.Id_H" />
                                         </td>
                                     </tr>
                                 }
